--- a/style.css
+++ b/style.css
@@ -6,8 +6,7 @@ h2{color:#474346;}
 @media only screen 
 and (max-width : 480px) {
   
-  h1{font-size: 20px;}
-  a{font-size: 16px;}
-  h2{font-size: 18px;}
-
+  h1{font-size: 40px;}
+  h2{font-size: 35px}
+  a{font-size: 30px;}
 }
