--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body{color:#474346;}
+body{text-color:#474346;}
 h1{text-align:center; color:#0c755b;}
 a{color:#1e747c;font-weight: bold;text-decoration:none;}
 h2{color:#474346;}
