--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 body{text-color:#474346;}
 h1{text-align:center; color:#0c755b;}
-a{color:#1e747c;font-weight: bold;text-decoration:none;}
 h2{color:#474346;}
+a{color:#1e747c;font-weight: bold;text-decoration:none;}
+a:hover{text-decoration: underline;}
 
 /* Smartphones (portrait) ----------- */
 @media screen 
