--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{text-color:#474346;}
-h1{text-align:center; color:#0c755b;}
+h1{color:#0c755b;}
 h2{color:#474346;}
 a{color:#1e747c;font-weight: bold;text-decoration:none;}
 a:hover{color:#474346}
